- GPR#156: Allow choosing an alternative linker and manifest tool at runtime
  with -use-linker=<cmd> and -use-mt=<cmd>.
  (Antonin Décimo, review by David Allsopp)
- GPR#133, GPR#147: Allow default libraries to be marked as optional (David Allsopp, report by Romain Beauxis)
- GPR#157: Improve flexlink support on Unix (for cross-compiling contexts).
  (Antonin Décimo, review by David Allsopp)

Version 0.43
- GPR#108: Add -lgcc_s to Cygwin's link libraries, upstreaming a patch from the
  Cygwin flexdll package (David Allsopp)
- GPR#112: Put error global variables into thread-local storage (Samuel Hym, Nicolás Ojeda Bär)
- GPR#114: Support for /alternatename directive. Fixes GPR#113 (Jonah Beckford)
- GPR#116: Remove Cygwin32 (David Allsopp)
- GPR#117: Fix handling of object names of length > 16 in archive files. Fixes GPR#101 (Nicolás Ojeda Bär)
- GPR#118: Defer the detection of cygpath to the first time it's actually
  required, reducing the overall number of calls. Further, detect whether
  mingw-w64 gcc's library path requires cygpath, which further reduces the
  calls when using Cygwin's build of mingw-w64 as the search path is then
  converted only once. In passing, this trivially adds support for MSYS2's
  mingw-w64 compilers, fixing GPR#97. (David Allsopp)

Version 0.42
- GPR#106: Support -l: syntax, to allow static linking of specific libraries (David Allsopp)
- GPR#103: Delete objects from C files compiled by flexlink (David Allsopp, report by Xavier Leroy)
- GPR#85: Split multiple arguments passed with a single -Wl (David Allsopp)

Version 0.41
- GPR#98: Eliminate Warning 6 compiling coff.ml (David Allsopp)
- GPR#99: Harden version number parsing from ocamlopt -version (David Allsopp)

Version 0.40
- GPR#65: Support for compiling objects with /bigobj (Extended COFF) (Dmitry Bely)
- GPR#80: Silence MSVC filenames for long commands as well as short ones (David Allsopp)